# ArPiRobot-DriveStation

./: .gitignore  ArPiRobot-DriveStation.spec  CMakeLists.txt  README.md  build_all.sh  change-version.py  compile-all  compile-all.bat  compile-res  compile-res.bat  compile-ui  compile-ui.bat  compile.py  launcher.py  launcher.spec  pyproject.toml  pyrightconfig.json  requirements.txt  vcpkg.json  win_installer.iss
.github/workflows/: buildlinux.yml  buildlinuxappimage.yml  buildlinuxsrc.yml  buildmacos.yml  buildrelease.yml  buildwin.yml
app/: drive_station.py  main.py  settings_dialog.py
cmake/: mingw32.cmake  mingw64.cmake
include/: DriveStation.h
old_packaging/: PACKAGING.md  linux_source.sh
old_packaging/linux_pyinstaller/: uninstall.sh
old_packaging/linux_source/: deb_control  uninstall.sh
old_packaging/windows/: win_installer.iss
packaging/: .gitignore  PACKAGING.md  PKG_LIN.md  PKG_MAC.md  PKG_WIN.md  README.md  clean.bat  clean.sh  launcher.py  launcher.spec  linux.sh  linux.spec  linux_appimage.sh  linux_pyinstaller.sh  linux_source.sh  macos.sh  temp  win_installer.iss  windows.cmd  windows.spec
packaging/linux/: io.github.arpirobot.DriveStation.appdata.xml  io.github.arpirobot.DriveStation.desktop  linux.spec
packaging/linux_appimage/: .gitignore  arpirobot-drivestation.appdata.xml  arpirobot-drivestation.desktop  get_download.py  start.sh
packaging/linux_pyinstaller/: deb_control  deb_postinst  install.sh  linux.spec
packaging/linux_resources/: uninstall.sh
packaging/linux_source/: deb_control  deb_prerm  install.sh  start.sh  uninstall.sh
packaging/macos/: macos.spec
packaging/windows/: win_installer.iss  windows.spec
res/: icon.icns  license_text.txt  resources.qrc  stylesheet.qss  third_party_licenses.txt  version.txt  win_res.rc  win_res_mingw.rc  winmanifest.manifest
res/custom-theme/: dark.csv  light.csv  stylesheet.qss
res/stylesheet-vars/: Dark.csv  Default.csv  Grey.csv  Light.csv  dark.csv
src/: .gitignore  DriveStation.cpp  about_dialog.py  controller_indicator.py  drive_station.py  gamepad.py  indicator_widget.py  main.cpp  main.py  model.py  network.py  settings_dialog.py  util.py
ui/: DriveStation.ui  about_dialog.ui  drive_station.ui  indicator_widget.ui  settings_dialog.ui
