[project]
dynamic = ["dependencies"]
name = "arpirobot-drivestation"
version = "1.1.0-rc1"
requires-python = ">= 3.8"
readme = "README.md"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.pyright]
include = ["src"]
typeCheckingMode = "basic"
reportGeneralTypeIssues = false
reportCallIssue = false
